# kaggle_plant_pathogen

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: download.sh
