[tool.poetry]
name = "kaggle_plant_pathogen"
version = "0.0.1"
description = "\"Kaggle Competition for Plant Pathogen - Tensorflow 2.0 Practice\""
authors = ["adityasidharta <aditya.sdrt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.4"
pandas = "^1.0.3"
numpy = "^1.18.2"
tensorflow = "^2.1.0"
kaggle = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
